fix overwrap issue for Student Contact Info

--- a/sli/dashboard/src/main/webapp/static/css/common.css
+++ b/sli/dashboard/src/main/webapp/static/css/common.css
@@ -167,7 +167,7 @@ th.ui-th-column div {
 	width:30%;
 }
 .contactInfoData {
-	width:200px;
+	width:250px;
 }
 
 .row {
